# byes-render

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
blender/Phil/: phil.blend
blender/old_chair/: old_chair.blend  old_chair.blend1  old_chair_with_cube.glb
blender/room/: room.blend  room.blend1
blender/sky/: sky.blend  sky.glb
examples/: CMakeLists.txt  basics.cc
include/render/: render_engine.h  render_engine_objects.inl
include/vkvf/: vkvf.h
scripts/: build.bat  gen.bat
shaders/: CMakeLists.txt  bitmap.frag  bitmap.vert  build_g_buffers.frag  build_g_buffers.vert  collect_g_buffers.frag  collect_g_buffers.vert  color.frag  color.vert  color_skin.vert  compile.bat  frag.spv  frag_2.spv  ggx.glsl  shadow.frag  shadow.vert  shadow_skin.vert  test.frag  test.vert  test_2.vert  ui.frag  ui.vert  vert.spv  vert_2.spv  white.frag  white.spv  white.vert  white_f.spv  white_v.spv
src/: CMakeLists.txt  common.h  engine.cc  platform.cc  platform.cpp  platform.h  render_engine.cc  stl_util.h  surface.cc  surface.cpp  surface.h  sync_util.h  vkvf.cc
src/render/: animator.cc  animator.h  batch.cc  batch.h  batches_manager.cc  batches_manager.h  buffer.cc  buffer.h  command_buffer.h  command_buffer_filler.cc  command_buffer_filler.h  command_pool.cc  command_pool.h  data_types.h  descriptor.h  descriptor_pool.cc  descriptor_pool.h  descriptor_set.h  descriptor_set_holder.h  descriptor_set_layout.cc  descriptor_set_layout.h  descriptor_sets_manager.cc  descriptor_sets_manager.h  descriptor_types.inl  frame_handler.cc  frame_handler.h  framebuffer.cc  framebuffer.h  framebuffer_collection.cc  framebuffer_collection.h  global.h  gltf_wrapper.cc  gltf_wrapper.h  graphics_pipeline.cc  graphics_pipeline.h  image.cc  image.h  image_view.cc  image_view.h  memory.cc  (+31 more)
src/render/ui/: panel.cc  panel.h  ui.cc  ui.h
